# gr-energy

./: .gitignore  CMakeLists.txt  MANIFEST.md
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-energyConfig.cmake
docs/: CMakeLists.txt  README.energy
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  energy_show_energy.block.yml
include/gnuradio/energy/: CMakeLists.txt  api.h  show_energy.h
lib/: CMakeLists.txt  show_energy_impl.cc  show_energy_impl.h
python/energy/: CMakeLists.txt  __init__.py
python/energy/bindings/: CMakeLists.txt  python_bindings.cc  show_energy_python.cc
python/energy/bindings/docstrings/: show_energy_pydoc_template.h
